add slick slider

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="header">
-    <div class="header__top">
+    <div class="header__top" style="background-image: url('images/top-bg.jpg');">
       <div class="header__top-inner">
         <h1 class="header__title">Куба</h1>
         <p class="header__text">Explore the world of Casas & Cadillacs</p>
@@ -37,7 +37,7 @@
 
   <section class="reason">
     <div class="container ">
-      <h2 class="reason__title">
+      <h2 class="reason__title title">
         Почему тебе понравится отпуск на Кубе?
       </h2>
       <p class="reason__text container-content">Куба всегда была привлекательна. Я люблю ее за уникальность,
@@ -81,9 +81,75 @@
     </div>
     </div>
   </section>
-  adsfaf
+
+  <section class="about">
+    <div class="container">
+      <div class="container-content">
+        <h2 class="about__title title">
+          Куба - это...
+        </h2>
+        <p class="about__text">Куба похожа на принца в плаще бедняка; за иногда ветхими фасадами задерживается золотая
+          пыль. Именно эти богатые
+          дихотомии делают путешествие здесь захватывающим. В этой стране, застрявшей во временном перекосе и шокирующей
+          экономическим эмбарго, которое длилось более полувека, вы можете распрощаться с повседневными предположениями
+          и
+          ожидать
+          неожиданностей.</p>
 
 
+        <div class="about__item" style="background-image: url('images/about-1.jpg');">
+          <div class="about__box">
+            <h3 class="about__box-title">
+              Историческое наследие
+            </h3>
+            <p class="abut__box-text">
+              Без современных вмешательств колониальные города Кубы не сильно изменились с тех пор, как мушкетные пираты
+              преследовали
+              Карибский бассейн. Атмосфера и архитектура особенно волнуют Гавану, Тринидад и Камагуэй, где грандиозные
+              площади и
+              мощеные улицы рассказывают сказки о богатстве и интригах.
+            </p>
+          </div>
+        </div>
+
+        <div class="about__item" style="background-image: url('images/about-2.jpg');">
+          <div class="about__box">
+            <h3 class="about__box-title">
+              Удивительные пляжи
+            </h3>
+            <p class="abut__box-text">
+              Неважно, останавливаетесь ли вы в роскошном отеле в Гаване или изучаете сельское очарование Виньялес. Не
+              пропустите
+              пляжный курортный город Варадеро, этот пляжный рай по-прежнему следует рассматривать как часть ваших
+              кубинских планов
+              путешествий.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <!-- CADILAK -->
+  </section>
+
+  <section class="photo">
+    <div class="container ">
+      <h2 class="photo__title title">
+        Куба в фото
+      </h2>
+      <p class="photo__text container-content">
+        Когда вы думаете о Карибском море, вы, вероятно, думаете о Кубе. Это одинокая акация, вырисовывающаяся на фоне
+        горизонта, уходящего в вечность. Это снежная гора почти на экваторе и в пределах видимости суровых пустынь. Это
+        пышная, покрытая пальмами береговая линия океана, это Великая рифтовая долина, которая когда-то угрожала
+        разорвать континент на части, и это густые леса, напоминающие сердце континента. </p>
+      <div class="photo__slider">
+        <img src="images/photo-slider-1.jpg" alt="" class="photo_img">
+        <img src="images/photo-slider-2.jpg" alt="" class="photo_img">
+        <img src="images/photo-slider-3.jpg" alt="" class="photo_img">
+        <img src="images/photo-slider-4.jpg" alt="" class="photo_img">
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
