--- a/index.html
+++ b/index.html
@@ -150,7 +150,62 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__items">
 
+        <div class="footer__item footer__item--company">
+          <h5 class="footer__item-title">КОМПАНИЯ</h5>
+          <ul class="footer__item-list">
+            <li><a href="#" class="footer__item-link">О компании</a></li>
+            <li><a href="#" class="footer__item-link">Работай с нами</a></li>
+            <li><a href="#" class="footer__item-link">Пресса</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__item">
+          <h5 class="footer__item-title">ДЕТАЛИ</h5>
+          <ul class="footer__item-list">
+            <li><a href="#" class="footer__item-link">Бронирование</a></li>
+            <li><a href="#" class="footer__item-link">Оплата</a></li>
+            <li><a href="#" class="footer__item-link">Условия</a></li>
+            <li><a href="#" class="footer__item-link">Политика</a></li>
+            <li><a href="#" class="footer__item-link">Карта сайта</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__item">
+          <h5 class="footer__item-title">КОНТАКТЫ</h5>
+          <ul class="footer__item-list">
+            <li><a href="#" class="footer__item-link footer__item-link--social footer__item-link--message">Свяжись с
+                нами</a></li>
+            <li><a href="#" class="footer__item-link footer__item-link--social footer__item-link--facebook">Facebook</a>
+            </li>
+            <li><a href="#"
+                class="footer__item-link footer__item-link--social footer__item-link--instagram">Instagram</a></li>
+            <li><a href="#" class="footer__item-link footer__item-link--social footer__item-link--youtube">YouTube</a>
+            </li>
+            <li><a href="#" class="footer__item-link footer__item-link--social footer__item-link--email">Почта</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__item footer__item--blog">
+          <h5 class="footer__item-title">БЛОГ</h5>
+          <ul class="footer__item-list">
+            <li><a href="#" class="footer__item-link">Идеи для фотосессии</a></li>
+            <li><a href="#" class="footer__item-link">Свадьба на Кубе</a></li>
+            <li><a href="#" class="footer__item-link">ТОП 10 ресторанов Кубы</a></li>
+            <li><a href="#" class="footer__item-link">Лучшие достопримечательности Гаванны</a></li>
+            <li><a href="#" class="footer__item-link">Кубинская кухня</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="footer__copy">© 2020 Все права защищены</div>
+
+    </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
