--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       </div>
     </div>
     <nav class="menu">
+      <div class="menu__btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul class="menu__list">
         <li class="menu__list-item"><a class="menu__list-link" href="#">Резюме</a></li>
         <li class="menu__list-item"><a class="menu__list-link" href="#">Главная</a></li>
@@ -34,7 +39,7 @@
       </ul>
     </nav>
   </header>
-
+  <!-- 
   <section class="reason">
     <div class="container ">
       <h2 class="reason__title title">
@@ -128,8 +133,50 @@
         </div>
 
       </div>
+      <div class="about__preview section-line">
+        <h2 class="about__preview-title title">Кубинский Кадиллак</h2>
+        <div class="about__imeges-box">
+          <img src="images/car.png" alt="">
+
+          <div class="about__dot about__dot--beg">
+            <p class="about__dot-text">
+              Круглый бампер
+            </p>
+
+          </div>
+
+          <div class="about__dot about__dot--door">
+            <p class="about__dot-text">
+              Две двери
+            </p>
+
+          </div>
+
+          <div class="about__dot about__dot--roof">
+            <p class="about__dot-text">
+              Откидная крыша
+            </p>
+
+          </div>
+
+          <div class="about__dot about__dot--wheel">
+            <p class="about__dot-text about__dot-text--wheel">
+              Закрытое колесо
+            </p>
+
+          </div>
+
+        </div>
+        <p class="about__preview-text container-content">Американское торговое эмбарго с Кубой в 1960 году привело к
+          немедленному
+          отделению тысяч автомобилей 1940-х и 1950-х
+          годов, построенных в Детройте от их запасных частей. Кабриолеты всегда были популярны благодаря круглогодичной
+          тропической погоде. Не упустите место для фотосессии в Гаване. Площадь вокруг Капитолия - лестная копия здания
+          Капитолия
+          в Вашингтоне, в дневное время украшены 50-летними американскими автомобилями.</p>
+      </div>
     </div>
-    <!-- CADILAK -->
+
   </section>
 
   <section class="photo">
@@ -208,7 +255,7 @@
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script> -->
 </body>
 
 </html>
