fix: show content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </ul>
     </nav>
   </header>
-  <!-- 
+
   <section class="reason">
     <div class="container ">
       <h2 class="reason__title title">
@@ -255,7 +255,7 @@
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <script src="js/main.js"></script> -->
+  <script src="js/main.js"></script>
 </body>
 
 </html>
